# fawkes

./: .clang-format  .cmake-format  .cmakelint.py  .dir-locals.el  .gitignore  .gitlint  .lgtm.yml  .pre-commit-config.yaml  .remarkrc.yaml  AUTHORS  CMakeLists.txt  Dockerfile  Makefile  README  README.md  config.yaml  docker-compose.yml
src/: CMakeLists.txt  Makefile
src/agents/: clips-executive
src/blackboard/: Makefile  bbthread.cpp  bbthread.h  blackboard.cpp  blackboard.h  exceptions.h  interface_manager.cpp  interface_manager.h  interface_mem_header.h  main_thread.cpp  main_thread.h  memory_manager.cpp  memory_manager.h  message_manager.cpp  message_manager.h  shmem_header.cpp  shmem_header.h  shmem_lister.h
src/blackboard/qa/: Makefile  qa_bb_interface.cpp  qa_bb_memmgr.cpp  qa_bb_messaging.cpp
src/blackboard/tools/: Makefile  bb_cleanup.cpp  bb_meminfo.cpp
src/core/: Makefile  exception.cpp  exception.h  plugin.cpp  plugin.h
src/core/exceptions/: software.cpp  software.h  system.cpp  system.h
src/core/threading/: barrier.cpp  barrier.h  fawkes_thread.h  mutex.cpp  mutex.h  read_write_lock.cpp  read_write_lock.h  refc_rwlock.cpp  refc_rwlock.h  thread.cpp  thread.h  wait_condition.cpp  wait_condition.h
src/core/utils/: lock_list.h  refcount.cpp  refcount.h  refcounter.h
src/examples/: Makefile  example_barrier.cpp  example_exception.cpp  example_mutex_count.cpp  example_mutex_sync.cpp  example_refcount.cpp  example_rwlock.cpp  example_waitcond.cpp  example_waitcond_serialize.cpp  test_matrix.cpp
src/firevision/: Makefile  fvconf.mk
src/firevision/apps/: Makefile
src/firevision/cams/: Makefile  bumblebee2.cpp  bumblebee2.h  cam_exceptions.cpp  cam_exceptions.h  camera.cpp  camera.h  cameracontrol.cpp  cameracontrol.h  controlfactory.cpp  controlfactory.h  dp_ptu.cpp  dp_ptu.h  dummy_control.h  factory.cpp  factory.h  fileloader.cpp  fileloader.h  firewire.cpp  firewire.h  leutron.cpp  leutron.h  nao.cpp  nao.h  net.cpp  net.h  pike.cpp  pike.h  shmem.cpp  shmem.h  sony_evid100p_control.cpp  sony_evid100p_control.h  swissranger.cpp  swissranger.h  v4l.cpp  v4l.h  v4l1.cpp  v4l1.h  v4l2.cpp  v4l2.h  (+2 more)
src/firevision/classifiers/: Makefile  border_shrinker.cpp  border_shrinker.h  classifier.cpp  classifier.h  faces.cpp  faces.h  feature.cpp  feature.h  gradient.cpp  gradient.h  qualifiers.cpp  qualifiers.h  shrinker.cpp  shrinker.h  sift.cpp  sift.h  siftpp.cpp  siftpp.h  simple.cpp  simple.h  square_shrinker.cpp  square_shrinker.h  surf.cpp  surf.h
src/firevision/filters/: Makefile  compare.cpp  compare.h  difference.cpp  difference.h  filter.cpp  filter.h  gauss.cpp  gauss.h  hipass.cpp  hipass.h  hor_search.cpp  hor_search.h  hv_search.cpp  hv_search.h  invert.cpp  invert.h  laplace.cpp  laplace.h  max.cpp  max.h  median.cpp  median.h  min.cpp  min.h  nothing.h  or.cpp  or.h  rectify.cpp  rectify.h  roidraw.cpp  roidraw.h  segment.cpp  segment.h  segment_color.cpp  segment_color.h  segment_scanline.cpp  segment_scanline.h  shape_remover.cpp  shape_remover.h  (+10 more)
src/firevision/fvutils/: Makefile  fvutils.mk  roi.cpp  roi.h  types.h
src/firevision/fvwidgets/: Makefile  fuse_image_list_widget.cpp  fuse_image_list_widget.h  image_display.cpp  image_display.h  image_widget.cpp  image_widget.h  sdl_keeper.cpp  sdl_keeper.h
src/firevision/models/: Makefile
src/firevision/stereo/: Makefile  stereo_processor.cpp  stereo_processor.h  triclops.cpp  triclops.h
src/firevision/tools/: Makefile  bb2gettric.cpp  bb2info.cpp  bb2rectlut.cpp  cmpp.cpp  converter.cpp  fvbb2gettric.txt  fvbb2info.txt  fvconverter.txt  fvlistfwcams.txt  fvnet.txt  fvshmem.txt  fvshowyuv.txt  fvviewer.txt  listfwcams.cpp  listsrcams.cpp  net.cpp  shmem.cpp  show_yuv.cpp  stereodecoder.cpp  tricalcdisp.cpp  viewer.cpp
src/interfaces/: .gitignore  BatteryInterface.cpp  BatteryInterface.h  BatteryInterface.tolua  BatteryInterface.xml  FacerInterface.cpp  FacerInterface.h  FacerInterface.tolua  FacerInterface.xml  FacialExpressionInterface.cpp  FacialExpressionInterface.h  FacialExpressionInterface.tolua  FacialExpressionInterface.xml  GameStateInterface.cpp  GameStateInterface.h  GameStateInterface.tolua  GameStateInterface.xml  HumanSkeletonInterface.cpp  HumanSkeletonInterface.h  HumanSkeletonInterface.tolua  HumanSkeletonInterface.xml  HumanSkeletonProjectionInterface.tolua  HumanoidMotionInterface.cpp  HumanoidMotionInterface.h  HumanoidMotionInterface.tolua  HumanoidMotionInterface.xml  JoystickInterface.cpp  JoystickInterface.h  JoystickInterface.tolua  JoystickInterface.xml  KickerInterface.cpp  KickerInterface.h  KickerInterface.tolua  KickerInterface.xml  Laser360Interface.cpp  Laser360Interface.h  Laser360Interface.tolua  Laser360Interface.xml  Laser720Interface.cpp  Laser720Interface.h  (+121 more)
src/interfaces/generator/: Makefile  constant.cpp  constant.h  cpp_generator.cpp  cpp_generator.h  digest.cpp  digest.h  enum_constant.cpp  enum_constant.h  exceptions.h  ffifacegen.txt  field.cpp  field.h  generator.cpp  generator.h  generator.mk  generator_rules.mk  main.cpp  message.cpp  message.h  parser.cpp  parser.h  pseudomap.cpp  pseudomap.h  tolua_generator.cpp  tolua_generator.h  type_checker.cpp  type_checker.h
src/interfaces/mediators/: interface_mediator.h
src/interfaces/qa/: Makefile  qa_interface_loader.cpp  qa_interface_msgq.cpp
src/libs/: CMakeLists.txt  Makefile  extlibs.mk
src/libs/aspect/: CMakeLists.txt  Makefile  aspect.cpp  aspect.h  aspect_provider.cpp  aspect_provider.h  blackboard.cpp  blackboard.h  blocked_timing.cpp  blocked_timing.h  clock.cpp  clock.h  inifin.cpp  (+39 more)
src/mainapp/: CMakeLists.txt  Makefile  config_manager.cpp  config_manager.h  fawkes.txt  main.cpp  main_thread.cpp  main_thread.h  network_manager.cpp  network_manager.h  plugin_list_message.cpp  plugin_list_message.h  plugin_manager.cpp  plugin_manager.h  plugin_messages.h  thread_inifin.cpp  thread_inifin.h  thread_initializer.cpp  thread_initializer.h  thread_manager.cpp  thread_manager.h
src/plugins/: CMakeLists.txt  Makefile
src/tools/: CMakeLists.txt  Makefile
src/utils/: Makefile
(+6037 files in other folders)
