include(ros)
include(yamlcpp)
include(eigen3)
include(pcl)
include(tf)
include(gui)
include(navgraph)
include(cgal_libs)
include(webview)
include(fvconf)
include(kdl_parser)
include(clipsmm)
include(protobuf)
include_directories(libs)
add_subdirectory(libs)
add_subdirectory(plugins)
add_subdirectory(mainapp)
# add_subdirectory(tools)
