add_subdirectory(core)
add_subdirectory(utils)
add_subdirectory(logging)
add_subdirectory(interface)
add_subdirectory(netcomm)
add_subdirectory(blackboard)
add_subdirectory(interfaces)
add_subdirectory(config)
add_subdirectory(tf)
add_subdirectory(plugin)
add_subdirectory(lua)
add_subdirectory(aspect)
add_subdirectory(network_logger)
add_subdirectory(webview)
add_subdirectory(gui_utils)
add_subdirectory(baseapp)
add_subdirectory(navgraph)
add_subdirectory(fvutils)
add_subdirectory(fvcams)
add_subdirectory(fvmodels)
add_subdirectory(fvfilters)
add_subdirectory(fvclassifiers)
add_subdirectory(fvstereo)
add_subdirectory(fvwidgets)
add_subdirectory(kdl_parser)
add_subdirectory(protobuf_clips)
add_subdirectory(pcl_utils)
add_subdirectory(syncpoint)
# add_subdirectory(googletest) empty
add_subdirectory(protoboard)
add_subdirectory(execution_time_estimator)
