set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/plugins)
set(CMAKE_SHARED_MODULE_PREFIX "")
include_directories(${PROJECT_SOURCE_DIR}/src)
add_subdirectory(laser)
# add_subdirectory(imu)
add_subdirectory(flite)
# add_subdirectory(festival) add_subdirectory(joystick)
# add_subdirectory(openrave) add_subdirectory(katana) add_subdirectory(jaco)
# add_subdirectory(pantilt) add_subdirectory(roomba) add_subdirectory(nao)
# add_subdirectory(robotino) add_subdirectory(bumblebee2)
# add_subdirectory(realsense) add_subdirectory(realsense2)
# add_subdirectory(perception) add_subdirectory(amcl) add_subdirectory(skiller)
# add_subdirectory(skiller-simulator)
# add_subdirectory(execution-time-estimator-navgraph)
# add_subdirectory(execution-time-estimator-lookup luaagent)
add_subdirectory(laser-filter)
# add_subdirectory(laser-lines)
add_subdirectory(laser-cluster)
# add_subdirectory(laser-pointclouds)
# add_subdirectory(static_transforms) add_subdirectory(navgraph
# navgraph-clusters) add_subdirectory(navgraph-generator)
# add_subdirectory(colli) 
add_subdirectory(clips) 
# add_subdirectory(clips-protobuf) add_subdirectory(clips-navgraph)
# add_subdirectory(clips-pddl-parser) add_subdirectory(clips-ros)
# add_subdirectory(clips-tf) add_subdirectory(openprs)
# add_subdirectory(openprs-agent) add_subdirectory(eclipse-clp)
# add_subdirectory(mongodb) add_subdirectory(mongodb_log)
# add_subdirectory(robot-memory) add_subdirectory(clips-robot-memory)
# add_subdirectory(pddl-robot-memory) add_subdirectory(openrave-robot-memory)
# add_subdirectory(openni) add_subdirectory(refboxcomm) add_subdirectory(ros)
# add_subdirectory(player) add_subdirectory(xmlrpc) add_subdirectory(gossip)
# add_subdirectory(robot_state_publisher) add_subdirectory(gazebo)
# add_subdirectory(dynamixel) add_subdirectory(navgraph-interactive)
# add_subdirectory(pddl-planner) add_subdirectory(stn-generator)
# add_subdirectory(clips-executive) add_subdirectory(asp)
# add_subdirectory(plexil) add_subdirectory(cedar)
# add_subdirectory(hardware-models) add_subdirectory(execution-time-estimator)
